
  - Fix for BUG#75592 (20408891), "SHOW VARIABLES WHERE" is expensive.

  - Fix for Bug#75113 (20821888), Fail in failover of the connection in MySQL fabric

  - Fix for Bug#72077 (18425861), Fabric connection with username to a server with disabled auth throws NPE

  - Add test for already fixed Bug#72546 (18719760), C/J Fabric createGroup() throws ClassCastException

03-23-15 - Version 5.1.35

  - Fix for Bug#19536760, GETSTRING() CALL AFTER RS.RELATIVE() RETURNS NULLPOINTEREXCEPTION

  - Fix for BUG#20453712, CLOB.SETSTRING() WITH VALID INPUT RETURNS EXCEPTION

  - Fix for BUG#20453671, CLOB.POSITION() API CALL WITH CLOB INPUT RETURNS EXCEPTION

  - Fix for Bug#20685022, SSL CONNECTION TO MYSQL 5.7.6 COMMUNITY SERVER FAILS.

  - Fix for Bug#20606107, TEST FAILURES WHEN RUNNING AGAINST 5.7.6 SERVER VERSION

  - Fix for Bug#20533907, BUG#20204783 FIX EXPOSES WRONG BEAHAVIORS IN FAILOVER CONNECTIONS.
    This fix is a refactoring of the default failover feature which is no longer attached to load-balancing support.

  - Fix for Bug#20504139, GETFUNCTIONCOLUMNS() AND GETPROCEDURECOLUMNS() RETURNS ERROR FOR VALID INPUTS.

  - Expose PreparedStatment.ParseInfo for external usage, with no capture of the connection, which allows for global, highly-concurrent parse caches to be
    implemented.

  - Fix for Bug#75309 (20272931), mysql connector/J driver in streaming mode will in the blocking state.

  - New property 'readOnlyPropagatesToServer' controls the implicit propagation of read only transaction access mode to server.

  - Fix for Bug#54095 (11761585), Unnecessary call in newSetTimestampInternal.
    Test case only. The bug was fixed as a consequence of the patch for Bug#71084.

  - Fix for Bug#67760 (15936413), Deadlock when concurrently executing prepared statements with Timestamp objects.

  - Fix for Bug#71084 (18028319), Wrong java.sql.Date stored if client and server time zones differ.