@@ -26,6 +26,8 @@ nn-nn-15 - Version 5.1.36
 
   - Add test for already fixed Bug#72546 (18719760), C/J Fabric createGroup() throws ClassCastException
 
+  - Fix for Bug#77217 (21184949), ClassCastException when executing a streaming PreparedStatement with Fabric
+
 03-23-15 - Version 5.1.35
 
   - Fix for Bug#19536760, GETSTRING() CALL AFTER RS.RELATIVE() RETURNS NULLPOINTEREXCEPTION
